javascript/src/grammar/TimeParser.ts
// Generated from lib/grammar/TimeParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { TimeParserListener } from "./TimeParserListener";
import { TimeParserVisitor } from "./TimeParserVisitor";


export class TimeParser extends Parser {
	public static readonly EnMonthValue = 1;
	public static readonly EnWeekValue = 2;
	public static readonly EnDayValue = 3;
	public static readonly EnAroundWord = 4;
	public static readonly EnAroundDayWord = 5;
	public static readonly EnBeforeWord = 6;
	public static readonly EnAfterWord = 7;
	public static readonly EnYearWord = 8;
	public static readonly EnMonthWord = 9;
	public static readonly EnDayWord = 10;
	public static readonly EnWeekWord = 11;
	public static readonly EnHourWord = 12;
	public static readonly EnMinuteWord = 13;
	public static readonly EnSecondWord = 14;
	public static readonly EnMorningWord = 15;
	public static readonly EnAfternoonWord = 16;
	public static readonly EnHourWholeWord = 17;
	public static readonly EnAtWord = 18;
	public static readonly EnAndWord = 19;
	public static readonly EnToWord = 20;
	public static readonly EnFrom = 21;
	public static readonly ZhValueWord = 22;
	public static readonly ZhAroundWord = 23;
	public static readonly ZhBeforeWord = 24;
	public static readonly ZhAfterWord = 25;
	public static readonly ZhYearWord = 26;
	public static readonly ZhMonthWord = 27;
	public static readonly ZhCountMonth = 28;
	public static readonly ZhDayWord = 29;
	public static readonly ZhDayWord_2 = 30;
	public static readonly ZhTian = 31;
	public static readonly ZhWeekWord = 32;
	public static readonly ZhHourWord = 33;
	public static readonly ZhHourWholeWord = 34;
	public static readonly ZhCountHour = 35;
	public static readonly ZhMinuteWord = 36;
	public static readonly ZhCountMinute = 37;
	public static readonly ZhSecondWord = 38;
	public static readonly ZhCountSecond = 39;
	public static readonly ZhMorningWord = 40;
	public static readonly ZhAfternoonWord = 41;
	public static readonly ZhToWord = 42;
	public static readonly ZhAtWord = 43;
	public static readonly ZhOf = 44;
	public static readonly ZhFrom = 45;
	public static readonly YearNumber = 46;
	public static readonly DateNumber = 47;
	public static readonly NormalNumber = 48;
	public static readonly MiddelConnectorWord = 49;
	public static readonly MiddelConnectorCurve = 50;
	public static readonly SlashConnectorWord = 51;
	public static readonly TimeConnectorWord = 52;
	public static readonly DateTimeConnectorWord = 53;
	public static readonly Comma = 54;
	public static readonly NEWLINE = 55;
	public static readonly WS = 56;
	public static readonly ANY = 57;
	public static readonly RULE_program = 0;
	public static readonly RULE_statementList = 1;
	public static readonly RULE_statement = 2;
	public static readonly RULE_stdPeriod = 3;
	public static readonly RULE_stdDateTime = 4;
	public static readonly RULE_stdDate = 5;
	public static readonly RULE_stdTime = 6;
	public static readonly RULE_stdDateConnector = 7;
	public static readonly RULE_stdTimeConnector = 8;
	public static readonly RULE_stdDateTimeConnector = 9;
	public static readonly RULE_stdPeriodTo = 10;
	public static readonly RULE_enPeriod = 11;
	public static readonly RULE_enPeriodWeek = 12;
	public static readonly RULE_enDateTime = 13;
	public static readonly RULE_enDate = 14;
	public static readonly RULE_enDateNormal = 15;
	public static readonly RULE_enDateAround = 16;
	public static readonly RULE_enWeekDay = 17;
	public static readonly RULE_enMonthDay = 18;
	public static readonly RULE_enYear = 19;
	public static readonly RULE_enMonth = 20;
	public static readonly RULE_enDay = 21;
	public static readonly RULE_enTime = 22;
	public static readonly RULE_enDirectTimeAround = 23;
	public static readonly RULE_enStepAliasMark = 24;
	public static readonly RULE_enPeriodTo = 25;
	public static readonly RULE_enAt = 26;
	public static readonly RULE_zhPeriod = 27;
	public static readonly RULE_zhPeriodWeek = 28;
	public static readonly RULE_zhDateTime = 29;
	public static readonly RULE_zhDate = 30;
	public static readonly RULE_zhDateNormal = 31;
	public static readonly RULE_zhDateAround = 32;
	public static readonly RULE_zhWeekDay = 33;
	public static readonly RULE_zhMonthDay = 34;
	public static readonly RULE_zhYear = 35;
	public static readonly RULE_zhMonth = 36;
	public static readonly RULE_zhDay = 37;
	public static readonly RULE_zhTime = 38;
	public static readonly RULE_zhTimeNormal = 39;
	public static readonly RULE_zhDirectTimeAround = 40;
	public static readonly RULE_zhNumberValue = 41;
	public static readonly RULE_zhWeekValue = 42;
	public static readonly RULE_zhYearValue = 43;
	public static readonly RULE_zhDateValue = 44;
	public static readonly RULE_zhStepAliasMark = 45;
	public static readonly RULE_zhAroundAliasMark = 46;
	public static readonly RULE_zhTimePeriodAliasMark = 47;
	public static readonly RULE_zhHourMark = 48;
	public static readonly RULE_zhMinuteMark = 49;
	public static readonly RULE_zhSecondMark = 50;
	public static readonly RULE_zhPeriodTo = 51;
	public static readonly RULE_zhAt = 52;
	public static readonly RULE_yearValue = 53;
	public static readonly RULE_numberValue = 54;
	public static readonly RULE_uselessWords = 55;
	public static readonly RULE_stdUselessWords = 56;
	public static readonly RULE_enUselessWords = 57;
	public static readonly RULE_zhUselessWords = 58;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "statementList", "statement", "stdPeriod", "stdDateTime", "stdDate", 
		"stdTime", "stdDateConnector", "stdTimeConnector", "stdDateTimeConnector", 
		"stdPeriodTo", "enPeriod", "enPeriodWeek", "enDateTime", "enDate", "enDateNormal", 
		"enDateAround", "enWeekDay", "enMonthDay", "enYear", "enMonth", "enDay", 
		"enTime", "enDirectTimeAround", "enStepAliasMark", "enPeriodTo", "enAt", 
		"zhPeriod", "zhPeriodWeek", "zhDateTime", "zhDate", "zhDateNormal", "zhDateAround", 
		"zhWeekDay", "zhMonthDay", "zhYear", "zhMonth", "zhDay", "zhTime", "zhTimeNormal", 
		"zhDirectTimeAround", "zhNumberValue", "zhWeekValue", "zhYearValue", "zhDateValue", 
		"zhStepAliasMark", "zhAroundAliasMark", "zhTimePeriodAliasMark", "zhHourMark", 
		"zhMinuteMark", "zhSecondMark", "zhPeriodTo", "zhAt", "yearValue", "numberValue", 
		"uselessWords", "stdUselessWords", "enUselessWords", "zhUselessWords",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "'\u524D'", undefined, "'\u5E74'", "'\u6708'", 
		"'\u4E2A\u6708'", "'\u65E5'", undefined, "'\u5929'", undefined, undefined, 
		"'\u6574'", undefined, "'\u5206'", undefined, "'\u79D2'", undefined, undefined, 
		undefined, undefined, undefined, "'\u7684'", "'\u4ECE'", undefined, undefined, 
		undefined, "'-'", "'~'", "'/'", "':'", "'T'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "EnMonthValue", "EnWeekValue", "EnDayValue", "EnAroundWord", 
		"EnAroundDayWord", "EnBeforeWord", "EnAfterWord", "EnYearWord", "EnMonthWord", 
		"EnDayWord", "EnWeekWord", "EnHourWord", "EnMinuteWord", "EnSecondWord", 
		"EnMorningWord", "EnAfternoonWord", "EnHourWholeWord", "EnAtWord", "EnAndWord", 
		"EnToWord", "EnFrom", "ZhValueWord", "ZhAroundWord", "ZhBeforeWord", "ZhAfterWord", 
		"ZhYearWord", "ZhMonthWord", "ZhCountMonth", "ZhDayWord", "ZhDayWord_2", 
		"ZhTian", "ZhWeekWord", "ZhHourWord", "ZhHourWholeWord", "ZhCountHour", 
		"ZhMinuteWord", "ZhCountMinute", "ZhSecondWord", "ZhCountSecond", "ZhMorningWord", 
		"ZhAfternoonWord", "ZhToWord", "ZhAtWord", "ZhOf", "ZhFrom", "YearNumber", 
		"DateNumber", "NormalNumber", "MiddelConnectorWord", "MiddelConnectorCurve", 
		"SlashConnectorWord", "TimeConnectorWord", "DateTimeConnectorWord", "Comma", 
		"NEWLINE", "WS", "ANY",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(TimeParser._LITERAL_NAMES, TimeParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return TimeParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "TimeParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return TimeParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return TimeParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(TimeParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, TimeParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << TimeParser.EnMonthValue) | (1 << TimeParser.EnWeekValue) | (1 << TimeParser.EnDayValue) | (1 << TimeParser.EnAroundWord) | (1 << TimeParser.EnAroundDayWord) | (1 << TimeParser.EnBeforeWord) | (1 << TimeParser.EnAfterWord) | (1 << TimeParser.EnYearWord) | (1 << TimeParser.EnMonthWord) | (1 << TimeParser.EnDayWord) | (1 << TimeParser.EnWeekWord) | (1 << TimeParser.EnHourWord) | (1 << TimeParser.EnMinuteWord) | (1 << TimeParser.EnSecondWord) | (1 << TimeParser.EnMorningWord) | (1 << TimeParser.EnAfternoonWord) | (1 << TimeParser.EnHourWholeWord) | (1 << TimeParser.EnAtWord) | (1 << TimeParser.EnAndWord) | (1 << TimeParser.EnToWord) | (1 << TimeParser.EnFrom) | (1 << TimeParser.ZhValueWord) | (1 << TimeParser.ZhAroundWord) | (1 << TimeParser.ZhBeforeWord) | (1 << TimeParser.ZhAfterWord) | (1 << TimeParser.ZhYearWord) | (1 << TimeParser.ZhMonthWord) | (1 << TimeParser.ZhCountMonth) | (1 << TimeParser.ZhDayWord) | (1 << TimeParser.ZhDayWord_2) | (1 << TimeParser.ZhTian))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (TimeParser.ZhWeekWord - 32)) | (1 << (TimeParser.ZhHourWord - 32)) | (1 << (TimeParser.ZhHourWholeWord - 32)) | (1 << (TimeParser.ZhCountHour - 32)) | (1 << (TimeParser.ZhMinuteWord - 32)) | (1 << (TimeParser.ZhCountMinute - 32)) | (1 << (TimeParser.ZhSecondWord - 32)) | (1 << (TimeParser.ZhCountSecond - 32)) | (1 << (TimeParser.ZhMorningWord - 32)) | (1 << (TimeParser.ZhAfternoonWord - 32)) | (1 << (TimeParser.ZhAtWord - 32)) | (1 << (TimeParser.ZhOf - 32)) | (1 << (TimeParser.ZhFrom - 32)) | (1 << (TimeParser.YearNumber - 32)) | (1 << (TimeParser.DateNumber - 32)) | (1 << (TimeParser.NormalNumber - 32)) | (1 << (TimeParser.MiddelConnectorWord - 32)) | (1 << (TimeParser.SlashConnectorWord - 32)) | (1 << (TimeParser.TimeConnectorWord - 32)) | (1 << (TimeParser.DateTimeConnectorWord - 32)) | (1 << (TimeParser.Comma - 32)))) !== 0)) {
				{
				this.state = 118;
				this.statementList();
				}
			}

			this.state = 121;
			this.match(TimeParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statementList(): StatementListContext {
		let _localctx: StatementListContext = new StatementListContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, TimeParser.RULE_statementList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 125;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 125;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
				case 1:
					{
					this.state = 123;
					this.statement();
					}
					break;

				case 2:
					{
					this.state = 124;
					this.uselessWords();
					}
					break;
				}
				}
				this.state = 127;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << TimeParser.EnMonthValue) | (1 << TimeParser.EnWeekValue) | (1 << TimeParser.EnDayValue) | (1 << TimeParser.EnAroundWord) | (1 << TimeParser.EnAroundDayWord) | (1 << TimeParser.EnBeforeWord) | (1 << TimeParser.EnAfterWord) | (1 << TimeParser.EnYearWord) | (1 << TimeParser.EnMonthWord) | (1 << TimeParser.EnDayWord) | (1 << TimeParser.EnWeekWord) | (1 << TimeParser.EnHourWord) | (1 << TimeParser.EnMinuteWord) | (1 << TimeParser.EnSecondWord) | (1 << TimeParser.EnMorningWord) | (1 << TimeParser.EnAfternoonWord) | (1 << TimeParser.EnHourWholeWord) | (1 << TimeParser.EnAtWord) | (1 << TimeParser.EnAndWord) | (1 << TimeParser.EnToWord) | (1 << TimeParser.EnFrom) | (1 << TimeParser.ZhValueWord) | (1 << TimeParser.ZhAroundWord) | (1 << TimeParser.ZhBeforeWord) | (1 << TimeParser.ZhAfterWord) | (1 << TimeParser.ZhYearWord) | (1 << TimeParser.ZhMonthWord) | (1 << TimeParser.ZhCountMonth) | (1 << TimeParser.ZhDayWord) | (1 << TimeParser.ZhDayWord_2) | (1 << TimeParser.ZhTian))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (TimeParser.ZhWeekWord - 32)) | (1 << (TimeParser.ZhHourWord - 32)) | (1 << (TimeParser.ZhHourWholeWord - 32)) | (1 << (TimeParser.ZhCountHour - 32)) | (1 << (TimeParser.ZhMinuteWord - 32)) | (1 << (TimeParser.ZhCountMinute - 32)) | (1 << (TimeParser.ZhSecondWord - 32)) | (1 << (TimeParser.ZhCountSecond - 32)) | (1 << (TimeParser.ZhMorningWord - 32)) | (1 << (TimeParser.ZhAfternoonWord - 32)) | (1 << (TimeParser.ZhAtWord - 32)) | (1 << (TimeParser.ZhOf - 32)) | (1 << (TimeParser.ZhFrom - 32)) | (1 << (TimeParser.YearNumber - 32)) | (1 << (TimeParser.DateNumber - 32)) | (1 << (TimeParser.NormalNumber - 32)) | (1 << (TimeParser.MiddelConnectorWord - 32)) | (1 << (TimeParser.SlashConnectorWord - 32)) | (1 << (TimeParser.TimeConnectorWord - 32)) | (1 << (TimeParser.DateTimeConnectorWord - 32)) | (1 << (TimeParser.Comma - 32)))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, TimeParser.RULE_statement);
		let _la: number;
		try {
			this.state = 173;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 14, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TimeParser.EnAtWord) {
					{
					this.state = 129;
					this.enAt();
					}
				}

				this.state = 132;
				this.enPeriod();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 134;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TimeParser.ZhAtWord) {
					{
					this.state = 133;
					this.zhAt();
					}
				}

				this.state = 136;
				this.zhPeriod();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 138;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TimeParser.EnAtWord) {
					{
					this.state = 137;
					this.enAt();
					}
				}

				this.state = 140;
				this.enDateTime();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 142;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TimeParser.ZhAtWord) {
					{
					this.state = 141;
					this.zhAt();
					}
				}

				this.state = 144;
				this.zhDateTime();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 146;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TimeParser.EnAtWord) {
					{
					this.state = 145;
					this.enAt();
					}
				}

				this.state = 148;
				this.stdDateTime();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 150;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TimeParser.EnAtWord) {
					{
					this.state = 149;
					this.enAt();
					}
				}

				this.state = 152;
				this.enDate();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 154;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TimeParser.ZhAtWord) {
					{
					this.state = 153;
					this.zhAt();
					}
				}

				this.state = 156;
				this.zhDate();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 158;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TimeParser.EnAtWord) {
					{
					this.state = 157;
					this.enAt();
					}
				}

				this.state = 160;
				this.enTime();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 162;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TimeParser.ZhAtWord) {
					{
					this.state = 161;
					this.zhAt();
					}
				}
